updating things for trial build of 1.0.0a1. Refs #978

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -78,6 +78,7 @@ definitions:
           - coverage combine
           - coveralls
           - coverage xml
+          - bash <(curl -Ls https://coverage.codacy.com/get.sh)
         artifacts:
           - coverage.xml
         services:
