--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -77,10 +77,10 @@ definitions:
           - coverage run openrem/manage.py test remapp --parallel --exclude-tag=slow
           - coverage combine
           - coveralls
-          - coverage xml
+          - coverage xml -o cobertura.xml
           - bash <(curl -Ls https://coverage.codacy.com/get.sh)
         artifacts:
-          - coverage.xml
+          - cobertura.xml
         services:
           - postgres
         caches:
