--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include LICENSE
 include README.rst
 include COPYING-GPLv3
-include CHANGES.rst
+include requirements.txt
 recursive-include openrem *
 
