--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -289,8 +289,8 @@ definitions:
         name: build and tag image and push to docker
         script:
           - export IMAGE_NAME=openrem/openrem:$BITBUCKET_BRANCH-$BITBUCKET_COMMIT
-          - export NEW_IMAGE_NAME=openrem/openrem:$BITBUCKET_TAG
-          - docker build -t openrem/openrem:$BITBUCKET_BRANCH-$BITBUCKET_COMMIT -t openrem/openrem:$BITBUCKET_BRANCH -t openrem/openrem:$BITBUCKET_TAG .
+#          - export NEW_IMAGE_NAME=openrem/openrem:$BITBUCKET_TAG
+          - docker build -t openrem/openrem:$BITBUCKET_BRANCH-$BITBUCKET_COMMIT -t openrem/openrem:$BITBUCKET_BRANCH -t openrem/openrem:1.0.0b1 .
           - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
           - docker push --all-tags openrem/openrem
         services:
