--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -266,7 +266,7 @@ definitions:
         script:
           - export IMAGE_NAME=openrem/openrem:$BITBUCKET_BRANCH-$BITBUCKET_COMMIT
           - echo $IMAGE_NAME
-          - docker build -t openrem/openrem:$BITBUCKET_BRANCH-$BITBUCKET_COMMIT -t openrem/openrem:$BITBUCKET_BRANCH .
+          - docker build -t openrem/openrem:$BITBUCKET_BRANCH-$BITBUCKET_COMMIT -t openrem/openrem:$BITBUCKET_BRANCH -t openrem/openrem:$BITBUCKET_COMMIT .
           - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
           - docker push --all-tags openrem/openrem
         services:
@@ -360,7 +360,7 @@ pipelines:
       - step:
           name: retag and repush image
           script:
-            - export IMAGE_NAME=openrem/openrem:$BITBUCKET_BRANCH-$BITBUCKET_COMMIT
+            - export IMAGE_NAME=openrem/openrem:$BITBUCKET_COMMIT
             - echo $IMAGE_NAME
             - export NEW_IMAGE_NAME=openrem/openrem:$BITBUCKET_TAG
             - echo $NEW_IMAGE_NAME
