--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,30 @@
-django>=3.2.16,<4
-django-filter==22.1
-django-solo==2.0.0
-django-crispy-forms==1.14.0
+django
+django-filter
+django-solo
+django-crispy-forms
 django-js-reverse==0.9.1
 
-pydicom==2.3.1
-pynetdicom==2.0.2
+pydicom
+pynetdicom
 
-matplotlib==3.6.3
-numpy==1.24.1
-plotly==5.12.0
-scipy==1.10.0
-pandas==1.5.2
+matplotlib
+numpy
+plotly
+scipy
+pandas
 
 pytz==2022.6
 humanize==4.4.0
-xlsxwriter==3.0.3
-openpyxl==3.0.10
-testfixtures==7.0.3
-mock==4.0.3
+xlsxwriter
+openpyxl
+testfixtures
+mock
 requests==2.28.1
-defusedxml==0.7.1
+defusedxml
 psycopg2-binary==2.9.5
 gunicorn==20.1.0
 
-huey==2.4.5
+huey
 redis==4.5.1
+hl7apy==1.3.5
+setuptools
