--- a/.dockerignore
+++ b/.dockerignore
@@ -16,7 +16,6 @@ Dockerfile*
 openrem/remapp/migrations/0*
 openrem/openremproject/wsgi.py
 openrem/openremproject/local_settings.py*
-openrem/remapp/tests
 imports
 logs
 .codacy.yml
@@ -28,3 +27,4 @@ logs
 .git
 .idea
 *.db*
+.venv
